<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="4dp" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_vertical"
                android:alignmentMode="alignMargins"
                android:columnCount="3"
                android:rowCount="9" >

                <QuickContactBadge
                    android:id="@+id/campoFoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="fill"
                    android:layout_row="0"
                    android:layout_rowSpan="2"
                    android:layout_weight="1"
                    android:src="@drawable/contato" />

                <TextView
                    android:id="@+id/item_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left|center_vertical"
                    android:layout_row="0"
                    android:layout_weight="1"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/campoNome"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center_vertical"
                    android:layout_row="1"
                    android:ems="10"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/item_telefone"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left|center_vertical"
                    android:layout_row="2"
                    android:text="@string/numero"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/campoNumero"
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_row="3"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left"
                    android:layout_row="4"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/campoLatitude"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="5"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left"
                    android:layout_row="6"
                    android:text="@string/longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/campoLongitude"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="7"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/addMapa"
                    android:layout_column="2"
                    android:layout_gravity="center|fill"
                    android:layout_row="4"
                    android:layout_rowSpan="4"
                    android:text="@string/mapa" />

                <LinearLayout
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_row="8" >

                    <Button
                        android:id="@+id/addOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnOk" />

                    <Button
                        android:id="@+id/addCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancelar" />

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
